Fix alignment of main content in other search engine confirmation modal (#701)

--- a/extension-manifest-v2/app/dawn-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
+++ b/extension-manifest-v2/app/dawn-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
@@ -352,6 +352,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%
 }
 
 .ChooseSearchView__modalHeader {
